# cgminer-cpu-btc-core

./: Cargo.toml  EXAMPLES_README.md  QUICK_START.md  README.md  WINDOWS_COMPATIBILITY.md  build-windows-compat.bat  build-windows.ps1  build.rs  run_benchmarks.sh  run_examples.sh  运行示例总结.md
.cargo/: config.toml
benches/: benchmark_report_macbook_m4.md  cpu_btc_core_benchmark.rs
docs/: BENCHMARK_GUIDE.md  CPU_CORE_CLEANUP_SUMMARY.md  CPU_CORE_LIMITATIONS.md  TASK_COMPLETION_SUMMARY.md
examples/: basic_mining_demo.rs  benchmark_config.toml  benchmark_demo.rs  cpu_affinity_demo.rs  detailed_diagnostic.rs  multi_device_demo.rs  performance_monitoring_demo.rs  quick_hashrate_test.rs  real_mining_simulation.rs  temperature_demo.rs  work_queue_diagnostic.rs
src/: concurrent_optimization.rs  core.rs  cpu_affinity.rs  device.rs  factory.rs  lib.rs  optimized_core.rs  optimized_device.rs  optimized_factory.rs  performance.rs  platform_optimization.rs  temperature.rs  temperature_test.rs
tests/: hashrate_calculation_test.rs  integration_tests.rs
