[package]
name = "cgminer-cpu-btc-core"
version = "0.2.0"
edition = "2021"
authors = ["CGMiner Rust Team"]
description = "Optimized CPU Bitcoin mining core for CGMiner-RS - provides SIMD-accelerated CPU mining with intelligent thermal and power management"
license = "GPL-3.0"
repository = "https://github.com/your-org/cgminer-rs"
keywords = ["bitcoin", "mining", "cpu", "simd", "sha256"]
categories = ["hardware-support", "algorithms"]

[dependencies]
# Core library
cgminer-core = { path = "../cgminer-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1"
fastrand = "2.0"

# CPU affinity and system info
core_affinity = "0.8"
num_cpus = "1.16"
sysinfo = "0.30"

# SIMD and performance
rayon = "1.8"

# Logging
tracing = "0.1"

# Optional features for advanced optimizations
[dependencies.raw-cpuid]
version = "11.0"
optional = true

[features]
default = ["simd-optimizations", "thermal-management", "power-management"]
simd-optimizations = []
thermal-management = []
power-management = []
advanced-cpu-detection = ["raw-cpuid"]
experimental = []

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[lib]
name = "cgminer_cpu_btc_core"
crate-type = ["rlib"]  # 只生成rlib，避免LTO冲突

# 如果需要动态库，可以单独构建
# crate-type = ["cdylib", "rlib"]
